--- a/Android_Res_Export.sketchplugin/Contents/Resources/code_panel.html
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/code_panel.html
@@ -10,6 +10,7 @@
 <div id="main">
     <div id="preview">
         <pre><code id="code" class="xml"></code></pre>
+        <div id="tips" class="tips-warning">xx</div>
     </div>
     <div id="foot-actions">
         <span class="gap-flex"></span>
