--- a/Android_Res_Export.sketchplugin/Contents/Resources/code_preview.html
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/code_preview.html
@@ -10,37 +10,45 @@
 <div id="main">
     <div id="preview">
         <pre><code id="code" class="xml"></code></pre>
-        <!-- <div id="tips" class="tips-warning">xx</div> -->
     </div>
     <div id="foot-actions">
         <span class="gap-flex"></span>
-        <button id="copy" class="button">Copy</button>
+        <button id="cancel" class="button">Cancel</button>
         <span class="gap"></span>
         <button id="save" class="button-blue">Save</button>
     </div>
 </div>
 
 <script>
-var copy = document.getElementById("copy"),
-    save = document.getElementById("save");
 
-copy.onclick = function() {
-    window.location.hash = "copy_" + new Date().getTime();
-    return false;
+var btnCancel = document.getElementById("cancel"),
+    btnSave = document.getElementById("save");
+
+// btnCopy.onclick = function() {
+//     window.location.hash = "copy_" + new Date().getTime();
+//     return false;
+// }
+
+btnSave.onclick = function() {
+    window.location.hash = "save";
 }
 
-save.onclick = function() {
-    window.location.hash = "save_" + new Date().getTime();
-    return false;
+btnCancel.onclick = function() {
+    window.location.hash = "cancel";
 }
 
 window.onfocus = function() {
-    window.location.hash = "focus";
+    window.location.hash = "windowOnFocus";
 }
 
-// document.oncontextmenu = function() {
-//     window.event.returnValue = false;
-// }
+document.oncontextmenu = function() {
+    window.event.returnValue = false;
+}
+
+function clickAtPoint(x, y) {
+    var element = document.elementFromPoint(x, y);
+    element.click();
+}
 
 function previewCode(code) {
     var ele_code = document.getElementById("code");
@@ -48,9 +56,9 @@ function previewCode(code) {
     hljs.highlightBlock(ele_code);
 }
 
-function clickAtPoint(x, y) {
-    var element = document.elementFromPoint(x, y);
-    element.click();
+function i18n(json) {
+    btnCancel.innerHTML = json["cancel"];
+    btnSave.innerHTML = json["save"];
 }
 
 </script>
