--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <hgroup class="logo">
         <h1>
             <a href="https://github.com/Ashung/Android_Res_Export/" rel="home">
-                <img src="android_res_export.png" alt="Android Res Export for Sketch"/>
+                <img src="android_res_export.png" srcset="android_res_export@2x.png 2x" alt="Android Res Export for Sketch"/>
             </a>
         </h1>
         <p class="porject-badge">
@@ -39,29 +39,58 @@
                 <i>&nbsp;</i>Download
             </a>
         </p>
+        <p class="install">
+            Search <strong>Android Res Export</strong> from
+            <a href="http://sketchrunner.com/">Sketch Runner</a>
+            to quick install.
+        </p>
     </hgroup>
 </header>
 <section>
-    <p>Export Android resources in Sketch – PNG assets, app icon, nine-patch image and vector drawable.</p>
+    <ul class="features">
+        <li>
+            <img src="css/png.png" srcset="css/png@2x.png 2x" alt=""/>
+            <h3>Multiple Sizes PNG</h3>
+            <p>Create and export multiple sizes PNG assets.</h3>
+        </li>
+        <li>
+            <img src="css/ninepatch.png" srcset="css/ninepatch@2x.png 2x" alt=""/>
+            <h3>Nine-Patch</h3>
+            <p>Create, preview nine-patch assets, and export multiple sizes image.<p>
+        </li>
+        <li>
+            <img src="css/vector.png" srcset="css/vector@2x.png 2x" alt=""/>
+            <h3>Android Vector</h3>
+            <p>Create and export Android vector drawable asset.<p>
+        </li>
+        <li>
+            <img src="css/icon.png" srcset="css/icon@2x.png 2x" alt=""/>
+            <h3>App Icon</h3>
+            <p>Create and export adaptive launcher icon for Android 8 and older version.</p>
+        </li>
+        <li>
+            <img src="css/xml.png" srcset="css/xml@2x.png 2x" alt=""/>
+            <h3>Shape XML</h3>
+            <p>View and export shape drawable XML code from Sketch layer.</p>
+        </li>
+        <li>
+            <img src="css/color.png" srcset="css/color@2x.png 2x" alt=""/>
+            <h3>Color Resource</h3>
+            <p>View and export color resource XML code from Sketch document colors or selected layers.</p>
+        </li>
+    </ul>
 </section>
 <footer>
     <div class="author">
         <p>
-            Follow me on
-            <a href="https://github.com/Ashung">Github</a>,
-            <a href="https://dribbble.com/ashung">Dribbble</a>,
-            <a href="https://behance.net/ashung">Behance</a>,
-            <a href="http://weibo.com/ashung">Weibo</a>.
+            Export Android resources in Sketch.
+            <a href="https://github.com/Ashung/Android_Res_Export/blob/master/README.md">Help</a>,
+            <a href="https://github.com/Ashung/Android_Res_Export/blob/master/README_zh.md">帮助</a>.
         </p>
         <p class="donate">
-            Donate via<br>
-            PayPal
-            <a href="https://www.paypal.me/ashung/2">$ 2.<small>00</small></a>
-            <a href="https://www.paypal.me/ashung/5">$ 5.<small>00</small></a>
-            <br>
-            微信 (WeChat Pay) <a href="https://ashung.github.io/donate.html?ref=android_res_export">&yen; 10.<small>00</small></a>
-            <br>
-            支付宝 (Alipay) <a href="https://ashung.github.io/donate.html?ref=android_res_export">&yen; 10.<small>00</small></a>
+            <a href="https://ashung.github.io/donate.html?ref=android_res_export">
+                Donate via PayPal, 微信 (WeChat), 支付宝 (Alipay)
+            </a>
         </p>
     </div>
     <a class="ribbon" href="https://github.com/Ashung/Android_Res_Export/">Fork me on GitHub</a>
