--- a/Android_Res_Export.sketchplugin/Contents/Resources/code_preview.html
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/code_preview.html
@@ -13,6 +13,7 @@
         <pre><code id="code" class="xml"></code></pre>
     </div>
     <div id="foot-actions">
+        <button id="copy" class="button">Copy</button>
         <span class="gap-flex"></span>
         <button id="cancel" class="button">Cancel</button>
         <span class="gap"></span>
