--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li>
             <img src="css/vector.png" srcset="css/vector@2x.png 2x" alt=""/>
             <h3>Android Vector</h3>
-            <p>Create and export Android vector drawable asset.<p>
+            <p>Create and export Android vector drawable asset, now support gradient and mask.<p>
         </li>
         <li>
             <img src="css/icon.png" srcset="css/icon@2x.png 2x" alt=""/>
@@ -75,8 +75,8 @@
         </li>
         <li>
             <img src="css/color.png" srcset="css/color@2x.png 2x" alt=""/>
-            <h3>Color Resource</h3>
-            <p>View and export color resource XML code from Sketch document colors or selected layers.</p>
+            <h3>Color Resource XML</h3>
+            <p>View and export color resource XML code from selected layers.</p>
         </li>
     </ul>
 </section>
