--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li>
             <img src="css/png.png" srcset="css/png@2x.png 2x" alt=""/>
             <h3>Multiple Sizes PNG</h3>
-            <p>Create and export multiple sizes PNG assets.</h3>
+            <p>Create and export multiple sizes PNG or WebP assets.</h3>
         </li>
         <li>
             <img src="css/ninepatch.png" srcset="css/ninepatch@2x.png 2x" alt=""/>
