--- a/resources/view_vector_drawable_code.html
+++ b/resources/view_vector_drawable_code.html
@@ -11,8 +11,9 @@
         <pre><code id="code" class="xml"></code></pre>
     </div>
     <div id="foot-actions">
-        <span class="gap-flex"></span>
         <button id="copy" class="button">Copy</button>
+        <span class="gap-flex"></span>
+        <button id="cancel" class="button">Cancel</button>
         <span class="gap"></span>
         <button id="save" class="button-blue">Save</button>
     </div>
