WIP Export bitmap assets

--- a/resources/view_vector_drawable_code.html
+++ b/resources/view_vector_drawable_code.html
@@ -10,6 +10,10 @@
     <div id="preview">
         <pre><code id="code" class="xml"></code></pre>
     </div>
+    <div id="">
+        fillBlack
+        XML Declaration
+    </div>
     <div id="foot-actions">
         <button id="copy" class="button">Copy</button>
         <span class="gap-flex"></span>
