--- a/resources/view_vector_drawable_code.html
+++ b/resources/view_vector_drawable_code.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <div id="main">
+    <div class="code-tab">
+        <label><input id="code-view-avd" type="radio" name="view" value="avd" checked><span>AVD</span></label>
+        <label><input id="code-view-svg" type="radio" name="view" value="svg"><span>SVG</span></label>
+    </div>
     <div id="preview">
         <pre><code id="code" class="xml"></code></pre>
     </div>
@@ -18,7 +22,7 @@
         </label>
         <span class="gap-flex"></span>
         <label id="label_tint" for="tint_color">Tint Color</label>
-        <span class="text-input text-input-prefix"><input id="tint_color" type="text" size="6" minlength="6" maxlength="6" pattern="[a-f0-9]{6}" placeholder="hex" autofocus="false" value="000000"></span>
+        <span class="text-input text-input-prefix"><input id="tint_color" type="text" size="6" minlength="6" maxlength="6" pattern="[A-Fa-f0-9]{6}" placeholder="hex" autofocus="false" value="000000"></span>
         <span class="gap"></span>
         <span class="text-input text-input-suffix"><input id="tint_color_alpha" type="number" max="100" min="0" size="3" placeholder="alpha" autofocus="false" value="100"></span>
         <span class="gap"></span>
