fixed code format.

--- a/resources/view_code.html
+++ b/resources/view_code.html
@@ -8,7 +8,7 @@
 <body>
 <div id="main">
     <div id="preview">
-        <pre><code id="code" class="xml"></code></pre>
+        <pre><code id="code"></code></pre>
     </div>
     <div id="foot-actions">
         <button id="copy" class="button">Copy</button>
